--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -13,11 +13,55 @@ body {
     color: rgb(36, 36, 36);
     scroll-behavior: smooth;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
     height: 100vh;
 }
 
+.users-list-box {
+    width: 25vw;
+    min-height: 100%;
+    background-color: rgb(26, 15, 73);
+    color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0 10px;
+}
+
+
+
+.room-name {
+    padding: 20px 0;
+    font-size: 1.2rem;
+    background-color: rgb(27, 14, 80);
+}
+
+.users-list-tittle {
+    padding-bottom: 10px;
+    border-bottom: 1px solid rgb(195, 181, 255);
+}
+
+.room-name,
+.users-list-tittle {
+    width: 100%;
+    padding-left: 20px;
+}
+
+.users-list {
+    width: 100%;
+    padding-left: 20px;
+    padding-top: 10px;
+}
+
+.messeges-wrapp {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 100%;
+    overflow: hidden;
+    scroll-behavior: smooth;
+}
 
 #messeges {
     display: flex;
