--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -59,6 +59,7 @@ body {
     flex-direction: column;
     align-items: flex-start;
     width: 100%;
+    height: 100%;
     overflow: hidden;
     scroll-behavior: smooth;
 }
@@ -71,7 +72,7 @@ body {
     align-items: flex-start;
     width: 100%;
     padding: 20px;
-    overflow: hidden;
+    overflow-y: scroll;
     scroll-behavior: smooth
 }
 
